# Rust-deployer

./: Cargo.toml  README.md  config.json  initial_data.json  wallet.scmsig1.json
src/: main.rs
