[package]
name = "rust-deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ton_client = { git = 'https://github.com/tonlabs/TON-SDK.git', tag = '1.35.0' }
ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', tag = '1.7.51' }
ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.11.2' }
base64 = '0.10.1'
tokio = { default-features = false, features = [ 'full' ], version = '1' }
serde_json = '1.0'
log = { features = [ 'std' ], version = '0.4.11' }